--- a/Index.html
+++ b/Index.html
@@ -9,7 +9,14 @@
 <body>
     <h1>pruebas</h1>
     <br>
-    <p>probando los parrafos de este lugar <br>probando</p>
+    <p>probando los parrafos de este lugar <br>probando <br>probando</p>
+    <ul>
+        <li>1</li>
+        <li>2</li>
+        <li>3</li>
+        <li>4</li>
+        <li>5+</li>
+    </ul>
     
 </body>
 </html>
