--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <nav class="navbar navbar-expand-sm bg-nav navbar-light sticky-top">
       <div class="container-fluid ">
         <a class="navbar-brand" href="#" target="_blank">
-          <img src="Images/logo-1.png" alt="Avatar Logo" style="width: 80px" />
+          <img src="Images/logo.png" alt="Avatar Logo" style="width: 80px" />
         </a>
         <a  class="numeroTel" href="#" target="_blank"><span><i class="bi bi-phone"></i> TEL.(999)1234567</span></a>
         
