--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="es">
 
 <head>
+  <meta name="google-site-verification" content="3GVpuKrDP1GFMqBhFUGF0Lhi4b_8aBe6Q-uMTAd9iho" />
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
