--- a/index.html
+++ b/index.html
@@ -1,179 +1,255 @@
 <!DOCTYPE html>
 <html lang="es">
-
-<head>
-  <meta name="google-site-verification" content="3GVpuKrDP1GFMqBhFUGF0Lhi4b_8aBe6Q-uMTAd9iho" />
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="clinica veterinaria ubicada en merida yucatan, 
+  <head>
+    <meta
+      name="google-site-verification"
+      content="3GVpuKrDP1GFMqBhFUGF0Lhi4b_8aBe6Q-uMTAd9iho"
+    />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="clinica veterinaria ubicada en merida yucatan, 
       ofreciendo servicios de cirugia, castracion o esterilizacion, 
-      baños con el servicio de recoleccion gratuito " />
-      <!-- <meta name="keywords" content="HTML5, CSS3, Javascript, Curso HTML5, Curso CSS" /> -->
-  <meta name=”theme-color” content=”#fff” />
+      baños con el servicio de recoleccion gratuito "
+    />
+    <meta
+      name="keywords"
+      content="Veterinario, Veterinaria, Clinica Veterinaria, Esterilizacion, Perro, Gato, Cirugia, Baños"
+    />
+    <meta name="”theme-color”" content="”#fff”" />
 
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
-  <link rel="shortcut icon" sizes="32x32" href="/Images/favicon.png" type="image/x-icon" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="shortcut icon"
+      sizes="32x32"
+      href="/Images/favicon.png"
+      type="image/x-icon"
+    />
 
-  <link rel="stylesheet" href="style.css" media="all" />
-  <style></style>
-  <title>Veterinaria Maxcot</title>
-</head>
-<header>
-  <h1 class="nombre bg-primary bg-opacity-b">Veterinaria Maxcot Merida</h1>
+    <link rel="stylesheet" href="style.css" media="all" />
+    <style></style>
+    <title>Veterinaria Maxcot</title>
+  </head>
+  <header>
+    <h1 class="nombre bg-primary bg-opacity-b">Veterinaria Maxcot Merida</h1>
+  </header>
 
-</header>
+  <body>
+    <!--     barra de navegacion     -->
+    <nav class="navbar navbar-expand-sm bg-nav navbar-light sticky-top shadow">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#" target="_blank" >
+          <img src="Images/logo-1.png" alt="Avatar Logo" class="logo" />
+        </a>
+        <div>
+          <a
+            class="numeroTel cerrar_movil"
+            href="tel:+529995285720"
+            target="_blank"
+            ><span
+              ><i class="bi bi-phone "></i>
+              CEL.999-528-57-20</span
+            ></a
+          >
+            </div>
 
-<body>
-  <!--     barra de navegacion     -->
-  <nav class="navbar navbar-expand-sm bg-nav navbar-light sticky-top">
-    <div class="container-fluid ">
-      <a class="navbar-brand" href="#" target="_blank">
-        <img src="Images/logo-1.png" alt="Avatar Logo" style="width: 80px" />
-      </a>
-      <a class="numeroTel" href="#" target="_blank"><span><i class="bi bi-phone"></i> TEL.(999)1234567</span></a>
+        <button
+          type="button"
+          class="navbar-toggler"
+          data-bs-toggle="collapse"
+          data-bs-target="#MenuNavegacion"
+        >
+          MENU<span class="navbar-toggler-icon"></span>
+        </button>
+        <div
+          id="MenuNavegacion"
+          class="collapse navbar-collapse justify-content-end"
+        >
+          <ul class="nav navbar-nav">
+            <li class="nav-item"><a href="#" class="nav-link">inicio</a></li>
+            <li class="nav-item dropdown align-items-lg-end">
+              <a
+                href="#"
+                class="nav-link dropdown-toggle"
+                role="button"
+                data-bs-toggle="dropdown"
+                >Servicios</a
+              >
+              <ul class="dropdown-menu">
+                <li><a href="#" class="dropdown-item">Cirugias</a></li>
+                <li><a href="#" class="dropdown-item">desparacitacion</a></li>
+                <li><a href="#" class="dropdown-item">baños</a></li>
+              </ul>
+            </li>
+            <li class="nav-item">
+              <a
+                rel="noreferrer"
+                class="nav-link"
+                target="_blank"
+                href="https://www.facebook.com/maxcotmx"
+                >promociones</a
+              >
+            </li>
+            <li class="nav-item">
+              <a href="#direcciones" class="nav-link"> Contacto</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <!--       fin de la barra de navegacion  -->
 
-      <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#MenuNavegacion">
-        MENU<span class="navbar-toggler-icon"></span>
-      </button>
-      <div id="MenuNavegacion" class="collapse navbar-collapse justify-content-end">
-        <ul class="nav navbar-nav">
-          <li class="nav-item "><a href="#" class="nav-link">inicio</a></li>
-          <li class="nav-item dropdown align-items-lg-end">
-            <a href="#" class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown">Servicios</a>
-            <ul class="dropdown-menu">
-              <li><a href="#" class="dropdown-item">Cirugias</a></li>
-              <li><a href="#" class="dropdown-item">desparacitacion</a></li>
-              <li><a href="#" class="dropdown-item">banos</a></li>
-            </ul>
+    <!-- portada de la pagina, foto de inicio -->
+    <div class="container-fluid">
+      <div class="centrar">
+        <div>
+          <img class="portada" src="Images/gato.webp" alt="Imagen de logo" />
+        </div>
+      </div>
+      <!--       comienza contenedor del cuerpo -->
+
+      <!--       principales servicios
+ -->
+      <div>
+        <ul class="principales-servicios">
+          <li class="cards">
+            <img src="Images/veterinary.webp" alt="imagen2" />
+            <br />
+            <h2>hospitalización</h2>
+            <p>
+              nuestras instalaciones estan listas para el resguardo de sus
+              mascotas, cuidadonlos durante su recuperacion
+            </p>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">promociones</a>
+          <li class=" cards">
+            <img src="Images/bathing.png" alt="imagen3" />
+            <h2>Spa para mascotas</h2>
+            <p>Baños y limpieza, aliminacion de garrapatas</p>
           </li>
-          <li class="nav-item">
-            <a href="#direcciones" class="nav-link"> Contacto</a>
+          <li class="cards">
+            <img src="Images/ambulance.png" alt="imagen4" />
+            <h2>Recolección</h2>
+            <p>
+              para su mayor comodidad, le ofrecemos la recoleccion directamente
+              a su domicilio <br />
+              <strong>*area limitada</strong>
+            </p>
           </li>
         </ul>
+        <a class="btn btn-primary" href="#" target="_blank"
+          >Ver Area Limitada</a
+        >
+        <br /><br /><br />
       </div>
-    </div>
-  </nav>
-  <!--       fin de la barra de navegacion  -->
+      <!-- comineza apartado de prueba de menu -->
 
-  <!-- portada de la pagina, foto de inicio -->
-  <div class="container-fluid">
-    <div class="centrar">
+      <!--     comienza el apartadod de mapa y direcciones    -->
       <div>
-        <img class="portada" src="Images/gato.jpg" alt="Imagen de logo" />
+        <iframe
+          title="Mapa"
+          class="mapa"
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d739.1704866494355!2d-89.60648220303393!3d20.98517681380873!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f567147f9c106d3%3A0x41847cd9f363bec!2sMaxcot%20Cl%C3%ADnica%20y%20Estetica%20Veterinaria!5e0!3m2!1ses-419!2smx!4v1638215032137!5m2!1ses-419!2smx"
+        ></iframe>
       </div>
-    </div>
-    <!--       comienza contenedor del cuerpo -->
-    <!--       principales servicios
- -->
-    <div>
-      <ul class="principales-servicios">
-
-        <li>
-          <img src="Images/veterinary.png" alt="imagen2">
-          <br>
-          <h2>hospitalizacion</h2>
-          <p>nuestras instalaciones estan listas para el resguardo de sus mascotas, cuidadonlos durante su recuperacion
-          </p>
-        </li>
-        <li>
-          <img src="Images/bathing.png" alt="imagen3">
-          <h2>Spa para mascotas</h2>
-          <p>Banos y limpieza, aliminacion de garrapatas</p>
-        </li>
-        <li>
-          <img src="Images/ambulance.png" alt="imagen4">
-          <h2>Recoleccion</h2>
-          <p>para su mayor comodidad, le ofrecemos la recoleccion directamente a su domicilio <br>
-            <strong>*area limitada</strong>
-          </p>
-        </li>
-      </ul>
+      <!-- termina el apartado de mapa y direcciones -->
     </div>
 
-    <!--     comienza el apartadod de mapa y direcciones    -->
-    <div id="direcciones" class="TwoCol bg-morado">
-      <div class="bg-morado">
-        <p class="titulo-parrafo">Contacto</p>
-
-        <p>
-          <i class="bi bi-house"></i> Direccion <br />calle 45 x 23 #433
-          col.carranza
-        </p>
-        <p>
-          <a
-            href="whatsapp://send?text=Buenos dias, quisiera informacion de&phone=+52 999 602 0550&abid=+52 999 602 0550"><i
-              class="bi bi-whatsapp"></i>999-602-0550</a>
-        </p>
-      </div>
-      <iframe title="Mapa" class="mapa"
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d739.1704866494355!2d-89.60648220303393!3d20.98517681380873!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f567147f9c106d3%3A0x41847cd9f363bec!2sMaxcot%20Cl%C3%ADnica%20y%20Estetica%20Veterinaria!5e0!3m2!1ses-419!2smx!4v1638215032137!5m2!1ses-419!2smx"
-        width="600" height="450" style="border: 0" loading="lazy"></iframe>
-    </div>
-    <!-- comienza apartado de servicios -->
-    <div class="container-lg centrar">
-      <div class="d-flex align-items-start">
-        <div class="nav flex-column nav-pills me-3" id="v-pills-tab" role="tablist" aria-orientation="vertical">
-          <button class="nav-link active" id="v-pills-home-tab" data-bs-toggle="pill" data-bs-target="#v-pills-home"
-            type="button" role="tab" aria-controls="v-pills-home" aria-selected="true">Home</button>
-          <button class="nav-link" id="v-pills-profile-tab" data-bs-toggle="pill" data-bs-target="#v-pills-profile"
-            type="button" role="tab" aria-controls="v-pills-profile" aria-selected="false">Profile</button>
-          <button class="nav-link" id="v-pills-messages-tab" data-bs-toggle="pill" data-bs-target="#v-pills-messages"
-            type="button" role="tab" aria-controls="v-pills-messages" aria-selected="false">Messages</button>
-          <button class="nav-link" id="v-pills-settings-tab" data-bs-toggle="pill" data-bs-target="#v-pills-settings"
-            type="button" role="tab" aria-controls="v-pills-settings" aria-selected="false">Settings</button>
+    <!-- Footer -->
+    <footer class="text-center text-lg-start bg-black text-light">
+      <!-- Section: Social media -->
+      <section
+        class="
+          d-flex
+          justify-content-center justify-content-lg-between
+          p-4
+          border-bottom
+        "
+      >
+        <!-- Left -->
+        <div class="me-5 d-none d-lg-block">
+          <span>Conectate con nosotros:</span>
         </div>
-        <div class="tab-content" id="v-pills-tabContent">
-          <div class="tab-pane fade show active" id="v-pills-home" role="tabpanel" aria-labelledby="v-pills-home-tab">
-            <div class="TwoCol">
-              <div class="">
-                <img class="mapa" src="Images/gato.jpg" alt="">
-              </div>
-              <div class="centrar">
-                <h3>Cirugias</h3>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quasi maxime provident praesentium iusto
-                  hic blanditiis eius laborum nostrum quos eos suscipit ea molestias ipsam enim debitis, aliquid
-                  consequatur quia necessitatibus!</p>
-              </div>
-            </div>
+        <!-- Left -->
 
+        <!-- Right -->
+        <div>
+          <a href="https://www.facebook.com/maxcotmx" target="_blank"rel="noreferrer" class="me-4 text-reset">
+            <i class="bi bi-facebook apps"></i>
+          </a>
+          <a href="https://twitter.com/maxcotmx?lang=es" target="_blank"rel="noreferrer" class="me-4 text-reset">
+            <i class="bi bi-twitter apps"></i>
+          </a>
+          <a href="https://www.instagram.com/maxcotmx/" target="_blank"rel="noreferrer" class="me-4 text-reset">
+            <i class="bi bi-instagram apps"></i>
+          </a>
+          <a href="https://wa.me/529995285720" target="_blank"rel="noreferrer" class="me-4 text-reset">
+            <i class="bi bi-whatsapp apps"></i>
+          </a>
+          <a href="http://m.me/maxcotmx" target="_blank"rel="noreferrer" class="me-4 text-reset">
+            <i class="bi bi-messenger apps"></i>
+          </a>
+        </div>
+        <!-- Right -->
+      </section>
+      <!-- Section: Social media -->
+
+      <!-- Section: Links  -->
+      <section class="">
+        <div class="container text-center text-md-start mt-5">
+          <!-- Grid row -->
+          <div class="row mt-3">
+            <!-- Grid column -->
+            <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+              <!-- Links -->
+              <p class="text-uppercase fw-bold mb-4 h6">Useful links</p>
+              <p>
+                <a
+                  href="https://www.facebook.com/maxcotmx"
+                  target="_blank"
+                  class="text-reset"
+                  rel="noreferrer"
+                  >Promociones</a
+                >
+              </p>
+              <p>
+                <a href="#!" class="text-reset">Settings</a>
+              </p>
+              <p>
+                <a href="#!" class="text-reset">Ayuda</a>
+              </p>
+            </div>
+            <!-- Grid column -->
+
+            <!-- Grid column -->
+            <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+              <!-- Links -->
+              <p class="text-uppercase fw-bold mb-4 h6">Contacto</p>
+              <p>
+                <i class="bi bi-house-door me-3"></i>calle 38 entre 29 y 31 núm. 452
+                c depto. 3 Col. Jesús Carranza.
+              </p>
+              <p><i class="bi bi-phone me-3"></i>999 528 57 20</p>
+            </div>
+            <!-- Grid column -->
           </div>
-          <div class="tab-pane fade" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab"><img
-              src="Images/gato.webp" alt="">
-            </div>
-          <div class="tab-pane fade" id="v-pills-messages" role="tabpanel" aria-labelledby="v-pills-messages-tab"><img
-              src="Images/perrito.jpg" alt=""></div>
-          <div class="tab-pane fade" id="v-pills-settings" role="tabpanel" aria-labelledby="v-pills-settings-tab"><img
-              src="Images/perrito.webp" alt=""></div>
+          <!-- Grid row -->
         </div>
-      </div>
-    </div>
+      </section>
+      <!-- Section: Links  -->
+    </footer>
+    <!-- Footer -->
 
-    <!-- boton redes sociales staticos -->
-    <!--       <div class="whatsapp">
-        <a
-          href="whatsapp://send?text=Buenos dias, quisiera informacion de&phone=+52 999 602 0550&abid=+52 999 602 0550"
-          ><i class="bi bi-whatsapp"></i
-        ></a> -->
-    <!--       <a href="https://m.me/XYZ">Envíanos un mensaje de Facebook</a>-->
-  </div>
-  <!-- termina boton redes sociales -->
-  </div>
-  <footer class="card-footer bg-black text-white">
-    <div>
-      <div>Contacto</div>
-      <div>Credito</div>
-    </div>
-
-  </footer>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-    crossorigin="anonymous"></script>
-</body>
-
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
