--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <link
       rel="shortcut icon"
       sizes="32x32"
-      href="/Images/favicon.png"
+      href="/Images/favicon.webp"
       type="image/x-icon"
     />
 
@@ -46,7 +46,7 @@
     <nav class="navbar navbar-expand-sm bg-nav navbar-light sticky-top shadow">
       <div class="container-fluid">
         <a class="navbar-brand" href="#" target="_blank" >
-          <img src="Images/logo-1.png" alt="Avatar Logo" class="logo" />
+          <img src="Images/logo-1.webp" alt="Avatar Logo" class="logo" />
         </a>
         <div>
           <a
