--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <nav class="navbar navbar-expand-sm bg-nav navbar-light sticky-top shadow">
       <div class="container-fluid">
         <a class="navbar-brand" href="#" target="_blank" >
-          <img src="Images/logo-1.webp" alt="Avatar Logo" class="logo" />
+          <img src="Images/Logo-1.webp" alt="Avatar Logo" class="logo" />
         </a>
         <div>
           <a
