--- a/index.html
+++ b/index.html
@@ -4,20 +4,21 @@
     <meta
       name="google-site-verification"
       content="3GVpuKrDP1GFMqBhFUGF0Lhi4b_8aBe6Q-uMTAd9iho"
-    />
+      />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="clinica veterinaria ubicada en merida yucatan, 
-      ofreciendo servicios de cirugia, castracion o esterilizacion, 
-      baños con el servicio de recoleccion gratuito "
-    />
+      content="clinica veterinaria ubicada en merida yucatan,
+      ofreciendo servicios de cirugia, castracion o esterilizacion,
+      baños con el servicio de recoleccion gratuito"
+      />
     <meta
       name="keywords"
-      content="Veterinario, Veterinaria, Clinica Veterinaria, Esterilizacion, Perro, Gato, Cirugia, Baños"
-    />
+      content="Veterinario, Veterinaria, Clinica Veterinaria, Esterilizacion,
+      Perro, Gato, Cirugia, Baños"
+      />
     <meta name="”theme-color”" content="”#fff”" />
 
     <link
@@ -25,53 +26,48 @@
       rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
-    />
+      />
     <link
       rel="shortcut icon"
       sizes="32x32"
-      href="/Images/favicon.webp"
+      href="/Images/favicon.png"
       type="image/x-icon"
-    />
+      />
 
     <link rel="stylesheet" href="style.css" media="all" />
     <style></style>
     <title>Veterinaria Maxcot</title>
   </head>
   <header>
-    <h1 class="nombre bg-primary bg-opacity-b">Veterinaria Maxcot Merida</h1>
+    
   </header>
 
   <body>
+    <h1 id="cabecera" class="nombre bg-primary bg-opacity-b">Veterinaria Maxcot Merida</h1>
+
     <!--     barra de navegacion     -->
     <nav class="navbar navbar-expand-sm bg-nav navbar-light sticky-top shadow">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#" target="_blank" >
+        <a class="navbar-brand" href="#">
           <img src="Images/Logo-1.webp" alt="Avatar Logo" class="logo" />
         </a>
         <div>
           <a
             class="numeroTel cerrar_movil"
             href="tel:+529995285720"
-            target="_blank"
-            ><span
-              ><i class="bi bi-phone "></i>
-              CEL.999-528-57-20</span
-            ></a
-          >
-            </div>
+            target="_blank"><span><i class="bi bi-phone"></i> CEL.999-528-57-20</span></a>
+        </div>
 
         <button
           type="button"
           class="navbar-toggler"
           data-bs-toggle="collapse"
-          data-bs-target="#MenuNavegacion"
-        >
+          data-bs-target="#MenuNavegacion">
           MENU<span class="navbar-toggler-icon"></span>
         </button>
         <div
           id="MenuNavegacion"
-          class="collapse navbar-collapse justify-content-end"
-        >
+          class="collapse navbar-collapse justify-content-end">
           <ul class="nav navbar-nav">
             <li class="nav-item"><a href="#" class="nav-link">inicio</a></li>
             <li class="nav-item dropdown align-items-lg-end">
@@ -79,12 +75,10 @@
                 href="#"
                 class="nav-link dropdown-toggle"
                 role="button"
-                data-bs-toggle="dropdown"
-                >Servicios</a
-              >
+                data-bs-toggle="dropdown">Servicios</a>
               <ul class="dropdown-menu">
-                <li><a href="#" class="dropdown-item">Cirugias</a></li>
-                <li><a href="#" class="dropdown-item">desparacitacion</a></li>
+                <li><a href="#" class="dropdown-item">Consultas</a></li>
+                <li><a href="#" class="dropdown-item">esterilizacion</a></li>
                 <li><a href="#" class="dropdown-item">baños</a></li>
               </ul>
             </li>
@@ -93,9 +87,7 @@
                 rel="noreferrer"
                 class="nav-link"
                 target="_blank"
-                href="https://www.facebook.com/maxcotmx"
-                >promociones</a
-              >
+                href="https://www.facebook.com/maxcotmx">promociones</a>
             </li>
             <li class="nav-item">
               <a href="#direcciones" class="nav-link"> Contacto</a>
@@ -115,39 +107,67 @@
       </div>
       <!--       comienza contenedor del cuerpo -->
 
-      <!--       principales servicios
- -->
+      <!--       principales servicios   -->
       <div>
         <ul class="principales-servicios">
           <li class="cards">
-            <img src="Images/veterinary.webp" alt="imagen2" />
+            <img class="card-img-top" src="Images/veterinary.webp" alt="imagen2" />
             <br />
-            <h2>hospitalización</h2>
-            <p>
+            <h2>esterilizacion</h2>
+            <p class="card-body">
               nuestras instalaciones estan listas para el resguardo de sus
               mascotas, cuidadonlos durante su recuperacion
             </p>
-          </li>
-          <li class=" cards">
-            <img src="Images/bathing.png" alt="imagen3" />
-            <h2>Spa para mascotas</h2>
-            <p>Baños y limpieza, aliminacion de garrapatas</p>
+            <a class="btn btn-primary" href="#" target="_blank">Ver mas</a>
           </li>
           <li class="cards">
-            <img src="Images/ambulance.png" alt="imagen4" />
+            <img class="card-img-top" src="Images/bathing.webp" alt="imagen3" />
+            <h2>Spa para mascotas</h2>
+            <p class="card-body">Baños y limpieza, aliminacion de garrapatas entre otras cosas</p>
+            <a class="btn btn-primary" href="#" target="_blank">Ver mas</a>
+          </li>
+          <li class="cards">
+            <img src="Images/ambulance.webp" alt="imagen4" />
             <h2>Recolección</h2>
-            <p>
+            <p class="card-body">
               para su mayor comodidad, le ofrecemos la recoleccion directamente
               a su domicilio <br />
               <strong>*area limitada</strong>
             </p>
+            <a class="btn btn-primary" href="#" target="_blank">Ver mas</a>
+          </li>
+          <li class="cards">
+            <img class="card-img-top" src="Images/hospital.webp" alt="imagen4" />
+            <h2>Consultas</h2>
+            <p class="card-body">
+              para su mayor comodidad, le ofrecemos la recoleccion directamente
+              a su domicilio <br />
+            </p>
+            <a class="btn btn-primary" href="#" target="_blank">Ver mas</a>
+          </li>
+          <li class="cards">
+            <img class="card-img-top" src="Images/vacuna.webp" alt="imagen4" />
+            <h2>vacunas</h2>
+            <p class="card-body">
+              para su mayor comodidad, le ofrecemos la recoleccion directamente
+              a su domicilio <br />
+            </p>
+            <a class="btn btn-primary" href="#" target="_blank">Ver mas</a>
+          </li>
+          <li class="cards">
+            <img class="card-img-top" src="Images/doctor.webp" alt="imagen4" />
+            <h2>cirugias</h2>
+            <p class="card-body">
+              para su mayor comodidad, le ofrecemos la recoleccion directamente
+              a su domicilio <br />
+            </p>
+            <a class="btn btn-primary" href="#" target="_blank">Ver mas</a>
           </li>
         </ul>
-        <a class="btn btn-primary" href="#" target="_blank"
-          >Ver Area Limitada</a
-        >
+
         <br /><br /><br />
       </div>
+      <!-- principales servicios -->
       <!-- comineza apartado de prueba de menu -->
 
       <!--     comienza el apartadod de mapa y direcciones    -->
@@ -155,8 +175,7 @@
         <iframe
           title="Mapa"
           class="mapa"
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d739.1704866494355!2d-89.60648220303393!3d20.98517681380873!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f567147f9c106d3%3A0x41847cd9f363bec!2sMaxcot%20Cl%C3%ADnica%20y%20Estetica%20Veterinaria!5e0!3m2!1ses-419!2smx!4v1638215032137!5m2!1ses-419!2smx"
-        ></iframe>
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d739.1704866494355!2d-89.60648220303393!3d20.98517681380873!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f567147f9c106d3%3A0x41847cd9f363bec!2sMaxcot%20Cl%C3%ADnica%20y%20Estetica%20Veterinaria!5e0!3m2!1ses-419!2smx!4v1638215032137!5m2!1ses-419!2smx"></iframe>
       </div>
       <!-- termina el apartado de mapa y direcciones -->
     </div>
@@ -165,13 +184,10 @@
     <footer class="text-center text-lg-start bg-black text-light">
       <!-- Section: Social media -->
       <section
-        class="
-          d-flex
-          justify-content-center justify-content-lg-between
-          p-4
-          border-bottom
-        "
-      >
+        class="d-flex
+        justify-content-center justify-content-lg-between
+        p-4
+        border-bottom">
         <!-- Left -->
         <div class="me-5 d-none d-lg-block">
           <span>Conectate con nosotros:</span>
@@ -180,19 +196,39 @@
 
         <!-- Right -->
         <div>
-          <a href="https://www.facebook.com/maxcotmx" target="_blank"rel="noreferrer" class="me-4 text-reset">
+          <a
+            href="https://www.facebook.com/maxcotmx"
+            target="_blank"
+            rel="noreferrer"
+            class="me-4 text-reset">
             <i class="bi bi-facebook apps"></i>
           </a>
-          <a href="https://twitter.com/maxcotmx?lang=es" target="_blank"rel="noreferrer" class="me-4 text-reset">
+          <a
+            href="https://twitter.com/maxcotmx?lang=es"
+            target="_blank"
+            rel="noreferrer"
+            class="me-4 text-reset">
             <i class="bi bi-twitter apps"></i>
           </a>
-          <a href="https://www.instagram.com/maxcotmx/" target="_blank"rel="noreferrer" class="me-4 text-reset">
+          <a
+            href="https://www.instagram.com/maxcotmx/"
+            target="_blank"
+            rel="noreferrer"
+            class="me-4 text-reset">
             <i class="bi bi-instagram apps"></i>
           </a>
-          <a href="https://wa.me/529995285720" target="_blank"rel="noreferrer" class="me-4 text-reset">
+          <a
+            href="https://wa.me/529995285720"
+            target="_blank"
+            rel="noreferrer"
+            class="me-4 text-reset">
             <i class="bi bi-whatsapp apps"></i>
           </a>
-          <a href="http://m.me/maxcotmx" target="_blank"rel="noreferrer" class="me-4 text-reset">
+          <a
+            href="http://m.me/maxcotmx"
+            target="_blank"
+            rel="noreferrer"
+            class="me-4 text-reset">
             <i class="bi bi-messenger apps"></i>
           </a>
         </div>
@@ -214,9 +250,7 @@
                   href="https://www.facebook.com/maxcotmx"
                   target="_blank"
                   class="text-reset"
-                  rel="noreferrer"
-                  >Promociones</a
-                >
+                  rel="noreferrer">Promociones</a>
               </p>
               <p>
                 <a href="#!" class="text-reset">Settings</a>
@@ -232,10 +266,10 @@
               <!-- Links -->
               <p class="text-uppercase fw-bold mb-4 h6">Contacto</p>
               <p>
-                <i class="bi bi-house-door me-3"></i>calle 38 entre 29 y 31 núm. 452
-                c depto. 3 Col. Jesús Carranza.
+                <i class="bi bi-house-door me-3"></i>calle 38 entre 29 y 31 núm.
+                452 c depto. 3 Col. Jesús Carranza.
               </p>
-              <p><i class="bi bi-phone me-3"></i>999 528 57 20</p>
+              <a class="link-light" href="tel:9995285720"><i class="bi bi-phone me-3"></i>999 528 57 20</a>
             </div>
             <!-- Grid column -->
           </div>
@@ -249,7 +283,6 @@
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-      crossorigin="anonymous"
-    ></script>
+      crossorigin="anonymous"></script>
   </body>
 </html>
